fix: Se arreglan funcionalidades y errores